// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ DashboardEditor/DashboardEditorHeader default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "height": "calc(100vh - 6rem)",
      }
    }
  >
    <div
      className="page-title-bar"
      data-testid="dashboard-editor-header-page-title-bar"
      style={
        Object {
          "--header-offset": "48px",
          "--negative-header-offset": "-48px",
          "--scroll-transition-progress": 1,
        }
      }
    >
      <div
        className="page-title-bar-header"
      >
        <div
          className="page-title-bar-breadcrumb-bg"
        />
        <div
          className="page-title-bar-breadcrumb breadcrumb--container"
        >
          <nav
            aria-label="Breadcrumb"
          >
            <ol
              className="bx--breadcrumb"
            >
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link bx--link"
                  href="www.ibm.com"
                  rel={null}
                >
                  Dashboard library
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link bx--link"
                  href="www.ibm.com"
                  rel={null}
                >
                  Favorites
                </a>
              </li>
            </ol>
          </nav>
        </div>
        <div
          className="page-title-bar-title"
        >
          <div
            className="page-title-bar-title--text"
          >
            <h2
              title="New dashboard"
            >
              New dashboard
            </h2>
          </div>
        </div>
        <div
          className="page-title-bar-header-right"
        >
          <div
            className="iot--dashboard-editor-header--right"
            data-testid="dashboard-editor-header"
          >
            <div
              className="iot--dashboard-editor-header--top"
            />
            <div
              className="iot--dashboard-editor-header--bottom"
            >
              <button
                aria-describedby="icon-tooltip-12"
                className="bx--tooltip__trigger bx--tooltip--a11y iot--dashboard-editor-header--bottom__import bx--tooltip--bottom bx--tooltip--align-center"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "cursor": "default",
                  }
                }
                type="button"
              >
                <span
                  className="bx--assistive-text"
                  id="icon-tooltip-12"
                  onMouseEnter={[Function]}
                >
                  Import
                </span>
                <label
                  accepts={
                    Array [
                      ".json",
                    ]
                  }
                  className="bx--btn bx--btn--ghost bx--btn--md"
                  data-testid="dashboard-editor-header-file-uploader-button"
                  htmlFor="id12"
                  onKeyDown={[Function]}
                  tabIndex={0}
                >
                  <span
                    aria-disabled={false}
                    role="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="#161616"
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M28 19L14.83 19 17.41 16.41 16 15 11 20 16 25 17.41 23.59 14.83 21 28 21 28 19z"
                      />
                      <path
                        d="M24,14V10a1,1,0,0,0-.29-.71l-7-7A1,1,0,0,0,16,2H6A2,2,0,0,0,4,4V28a2,2,0,0,0,2,2H22a2,2,0,0,0,2-2V26H22v2H6V4h8v6a2,2,0,0,0,2,2h6v2Zm-8-4V4.41L21.59,10Z"
                      />
                    </svg>
                  </span>
                </label>
                <input
                  className="bx--visually-hidden"
                  disabled={false}
                  id="id12"
                  multiple={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  tabIndex="-1"
                  type="file"
                />
              </button>
              <button
                aria-describedby={null}
                className="iot--btn bx--btn bx--btn--md bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--bottom bx--tooltip--align-center"
                data-testid="Button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
                type="button"
              >
                <div
                  className="bx--assistive-text"
                  onMouseEnter={[Function]}
                >
                  Export
                </div>
                <svg
                  aria-hidden="true"
                  aria-label="Export"
                  className="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 21L26.17 21 23.59 23.59 25 25 30 20 25 15 23.59 16.41 26.17 19 13 19 13 21z"
                  />
                  <path
                    d="M22,14V10a1,1,0,0,0-.29-.71l-7-7A1,1,0,0,0,14,2H4A2,2,0,0,0,2,4V28a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V26H20v2H4V4h8v6a2,2,0,0,0,2,2h6v2Zm-8-4V4.41L19.59,10Z"
                  />
                </svg>
              </button>
              <button
                aria-describedby={null}
                className="iot--btn bx--btn bx--btn--md bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--bottom bx--tooltip--align-center"
                data-testid="Button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
                type="button"
              >
                <div
                  className="bx--assistive-text"
                  onMouseEnter={[Function]}
                >
                  Delete
                </div>
                <svg
                  aria-hidden="true"
                  aria-label="Delete"
                  className="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 12H14V24H12zM18 12H20V24H18z"
                  />
                  <path
                    d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
                  />
                </svg>
              </button>
              <button
                aria-describedby={null}
                aria-pressed={null}
                className="iot--btn bx--btn bx--btn--md bx--btn--secondary"
                data-testid="Button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
                type="button"
              >
                Cancel
              </button>
              <button
                aria-describedby={null}
                aria-pressed={null}
                className="iot--btn bx--btn bx--btn--md bx--btn--primary"
                data-testid="Button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
                type="button"
              >
                Save and close
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ DashboardEditor/DashboardEditorHeader with editable title and no import/export/delete 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "height": "calc(100vh - 6rem)",
      }
    }
  >
    <div
      className="page-title-bar"
      data-testid="dashboard-editor-header-page-title-bar"
      style={
        Object {
          "--header-offset": "48px",
          "--negative-header-offset": "-48px",
          "--scroll-transition-progress": 1,
        }
      }
    >
      <div
        className="page-title-bar-header"
      >
        <div
          className="page-title-bar-breadcrumb-bg"
        />
        <div
          className="page-title-bar-breadcrumb breadcrumb--container"
        >
          <nav
            aria-label="Breadcrumb"
          >
            <ol
              className="bx--breadcrumb"
            >
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link bx--link"
                  href="www.ibm.com"
                  rel={null}
                >
                  Dashboard library
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link bx--link"
                  href="www.ibm.com"
                  rel={null}
                >
                  Favorites
                </a>
              </li>
            </ol>
          </nav>
        </div>
        <div
          className="page-title-bar-title"
        >
          <div
            className="page-title-bar-title--text"
          >
            <h2
              title="New dashboard"
            >
              New dashboard
            </h2>
            <button
              aria-describedby={null}
              className="page-title-bar-title--edit iot--btn bx--btn bx--btn--md bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--bottom bx--tooltip--align-center"
              data-testid="Button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              tabIndex={0}
              title="Edit title"
              type="button"
            >
              <div
                className="bx--assistive-text"
                onMouseEnter={[Function]}
              >
                Edit title
              </div>
              <svg
                aria-hidden="true"
                aria-label="Edit title"
                className="bx--btn__icon"
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="page-title-bar-header-right"
        >
          <div
            className="iot--dashboard-editor-header--right"
            data-testid="dashboard-editor-header"
          >
            <div
              className="iot--dashboard-editor-header--top"
            />
            <div
              className="iot--dashboard-editor-header--bottom"
            >
              <button
                aria-describedby={null}
                aria-pressed={null}
                className="iot--btn bx--btn bx--btn--md bx--btn--secondary"
                data-testid="Button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
                type="button"
              >
                Cancel
              </button>
              <button
                aria-describedby={null}
                aria-pressed={null}
                className="iot--btn bx--btn bx--btn--md bx--btn--primary"
                data-testid="Button"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
                type="button"
              >
                Save and close
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
